# sql2df

./: Cargo.toml  README.md
docs/: sql_ast_example.json
examples/: covid.rs  pola.rs  sqlparser.rs
src/: convert.rs  dialect.rs  fetcher.rs  lib.rs
