[package]
name = "sql2df"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlparser = "0.18.0"
anyhow = "1"
polars = { version = "0.22", features = ["lazy"]}
polars-lazy = "0.22"
reqwest = "0.11.11"
tokio = { version = "1", features = ["fs"]}
log = "0.4"
env_logger = "0.9"
tracing = "0.1"
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"]}
tracing-subscriber = "0.2"